--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "extern/OTExtension"]
 	path = extern/OTExtension
 	url = https://github.com/encryptogroup/OTExtension.git
+[submodule "extern/cpu_features"]
+	path = extern/cpu_features
+	url = https://github.com/google/cpu_features.git
