--- a/src/abycore/CMakeLists.txt
+++ b/src/abycore/CMakeLists.txt
@@ -18,14 +18,18 @@ add_library(aby
     sharing/yao_variants/halfgates_prp_client.cpp
     sharing/yao_variants/halfgates_prp_server.cpp
     sharing/yao_variants/halfgates_circ.cpp
-    sharing/yao_variants/yao_prf.cpp 
+    sharing/yao_variants/prf_server.cpp 
+    sharing/yao_variants/prf_client.cpp
     sharing/aes_processors/aes_processor.cpp
     sharing/aes_processors/aesni_halfgate_processors.cpp
     sharing/aes_processors/vaes_halfgate_processors.cpp 
+    sharing/aes_processors/aesni_prf_processors.cpp
     )
 add_library(ABY::aby ALIAS aby)
 
 set_source_files_properties(sharing/aes_processors/aesni_halfgate_processors.cpp PROPERTIES COMPILE_FLAGS "-maes -msse4.1")
+set_source_files_properties(sharing/aes_processors/aesni_prf_processors.cpp PROPERTIES COMPILE_FLAGS "-maes -msse4.1")
+set_source_files_properties(sharing/yao_variants/prf_server.cpp  PROPERTIES COMPILE_FLAGS "-maes -msse4.1")
 set_source_files_properties(sharing/aes_processors/vaes_halfgate_processors.cpp PROPERTIES COMPILE_FLAGS "-mvaes -mavx512f")
 
 target_compile_features(aby PUBLIC cxx_std_17)
